matchers no test

--- a/TODO
+++ b/TODO
@@ -1,12 +1,18 @@
 [x] panic
-[ ] matcher by value
-[ ] lengths
-[ ] contains
-[ ] gt, gte, etc
-[ ] type assertions
-[ ] nil, nan
-[ ] errors
-[ ] slices
-  [ ] is sorted
-  [ ] equals ignore order (array containing)
-[ ] Fix error messages
+[ ] matchers by value
+  [ ] implement matchers
+  [ ] add matchers to ToHaveBeenCalled
+  [ ] add WhenCalledWith
+[ ] add temporary mock implementations (once, times, etc)
+[ ] mock generator
+[ ] assertions
+  [ ] lengths
+  [ ] contains
+  [ ] gt, gte, etc
+  [ ] type assertions
+  [ ] nil, nan
+  [ ] errors
+  [ ] slices
+    [ ] is sorted
+    [ ] equals ignore order (array containing)
+[ ] Fix messages
