adding lots of matcher tests and implementing imutability

--- a/TODO
+++ b/TODO
@@ -1,6 +1,11 @@
 [x] panic
 [ ] matchers by value
   [ ] implement matchers
+    [x] Immutability
+    [ ] RegexMatcher
+    [ ] change Containing to Matching
+    [ ] add ContainingAll
+    [ ] tests
   [ ] add matchers to ToHaveBeenCalled
   [ ] add WhenCalledWith
 [ ] add temporary mock implementations (once, times, etc)
