general matcher no tests

--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
     [x] change Containing to Matching
     [x] add ContainingAll
     [ ] struct or general matcher
+    [ ] time.Time matcher
     [ ] change AnyMap Containing to receive a map[any]any
     [ ] review tests and public interface
   [ ] add matchers to ToHaveBeenCalled
